--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -1,40 +1,103 @@
-{% extends "homepage.html" %}
 
-{% block nav %}
-<li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
-</li>
-{% endblock %}
+<html>
+<head>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+            background: #f8bc63;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .Cart-Container{
+        width: 70%;
+        height: 85%;
+        background-color: #ffffff;
+        border-radius: 20px;
+        box-shadow: 0px 25px 40px #1687d933;
+        }
+        .Header{
+            margin: auto;
+            width: 90%;
+            height: 15%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .Heading{
+            font-size: 20px;
+            font-family: ‘Open Sans’;
+            font-weight: 700;
+            color: #2F3841;
+        }
+        .Action{
+            font-size: 14px;
+            font-family: ‘Open Sans’;
+            font-weight: 600;
+            color: #E44C4C;
+            cursor: pointer;
+            border-bottom: 1px solid #E44C4C;
+        }
+        .Cart-Items{
+            margin: auto;
+            width: 90%;
+            height: 30%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .image-box{
+            width: 15%;
+            text-align: center;
+        }
+        .about{
+            height: 100%;
+        }
+        .title{
+            padding-top: 5px;
+            line-height: 10px;
+            font-size: 32px;
+            font-family: ‘Open Sans’;
+            font-weight: 800;
+            color: #202020;
+        }
+        .subtitle{
+            line-height: 10px;
+            font-size: 18px;
+            font-family: ‘Open Sans’;
+            font-weight: 600;
+            color: #909090;
+        }
+    </style>
+</head>
+<body>
+    <div class="Cart-Container">
+        {% block content %}
+            <h1>Shopping Cart</h1>
+            {% if carts %}
+            <ul>
+                {% for cart in cart_items %}
+                <li>
+                    <h2>{{ cart.name }}</h2>
+                    <img src="{{ cart.image.url }}" alt="{{ cart.name }}" width="750" height="450">
+                    <p>Quantity: {{ cart.quantity }}</p>
+                    <p>Price: ${{ cart.price }}</p>
+                    <p>Total Price: ${{ cart.total_price }}</p>
+                </li>
+                {% endfor %}
+            </ul>
+            <h2>Total: ${{ total_price }}</h2>
+            <form method="POST" action="{% url 'create_transaction' %}">
+                {% csrf_token %}
+                <button type="submit">Buy</button>
+            </form>
+            {% else %}
+            <h2>Your cart is empty.</h2>
+            {% endif %}
+        {% endblock %}
+    </div>
+</body>
 
-{% block right-nav %}
-<li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;";>login</a>
-</li>
-{% endblock %}
-
-{% block content %}
-    <h1>Shopping Cart</h1>
-    {% if carts %}
-    <ul>
-        {% for cart in cart_items %}
-        <li>
-            <h2>{{ cart.name }}</h2>
-            <img src="{{ cart.image.url }}" alt="{{ cart.name }}" width="750" height="450">
-            <p>Quantity: {{ cart.quantity }}</p>
-            <p>Price: ${{ cart.price }}</p>
-            <p>Total Price: ${{ cart.total_price }}</p>
-        </li>
-        {% endfor %}
-    </ul>
-    <h2>Total: ${{ total_price }}</h2>
-    <form method="POST" action="{% url 'create_transaction' %}">
-        {% csrf_token %}
-        <button type="submit">Buy</button>
-    </form>
-    {% else %}
-    <h2>Your cart is empty.</h2>
-    {% endif %}
-{% endblock %}
+</html>
