--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -10,8 +10,15 @@
   <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Order Status</a>
 </li>
 
-<li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
+<li class="nav-item dropdown">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Chat with Corgi
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li><a class="dropdown-item" href="#">littlecorgi Store</a></li>
+    <li><a class="dropdown-item" href="#">bokbok Store</a></li>
+    <li><a class="dropdown-item" href="#">Puppy Store</a></li>
+  </ul>
 </li>
 
 {% endblock %}
