--- a/corgi/core/templates/profile.html
+++ b/corgi/core/templates/profile.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <head>
     <title>Seller Site</title>
+    <link rel="icon" type="image/x-icon" href="{% static '/media/logo.jpg'%}" />
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
