--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -41,13 +41,14 @@
     </div> -->
 
 
-    <h1 style="position: absolute;top: 25%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 60px">Welcome to Corgi Store</h1>
-    <p style="position: absolute;top: 35%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">You are...</p>
-    <p style="position: absolute;top: 75%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 20px">Get ready to unleash your inner corgi lover</p>
-        <img src="{% static 'media/corgi_main.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
-            <div class="d-grid gap-2 col-6 mx-auto" style="position: absolute;top: 55%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%); ">
+    <h1 style="position: absolute;top: 30%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 50px">Welcome to</h1>
+    <h1 style="position: absolute;top: 38%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 50px">Corgi Store</h1>
+    <p style="position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">You are...</p>
+    <p style="position: absolute;top: 90%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 20px">Get ready to unleash your inner corgi lover</p>
+        <img src="{% static 'media/corgi_homepage.png'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
+            <div class="d-grid gap-2 col-6 mx-auto" style="position: absolute;top: 70%;left: 50%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%); ">
                 <button onclick="location.href='/store'"
-                style="background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;margin-right: 20px;" type="button">
+                style="background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;  type="button">
                     Customer</button>
                 <button onclick="location.href='/seller/login'"
                 style='background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
