--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -25,10 +25,10 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="#">Manage My Store</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,17 +44,21 @@
                   </ul>
                 </li>
               </ul>
-              <form class="d-flex mt-3" role="search">
+              <!-- <form class="d-flex mt-3" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
+              </form> -->
             </div>
           </div>
         </div>
       </nav>
 </head>
 <body>
-
-<body>
+  <p style="position: absolute;top: 45%;left: 27%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">Let's make corgi products a love</p>
+  <p style="position: absolute;top: 55%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">at first sight experience for everyone!</p>
+  <img src="{% static 'media/first.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
+</html>body>
 
 </html>
+
+
