--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -19,9 +19,14 @@
           </a>
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h5>
+              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h3>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
+            <style>
+              .navbar-nav li a {
+                font-size: 18px; /* adjust the font size as desired */
+              }
+            </style>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
@@ -30,7 +35,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Manage My Store</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Inbox</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Order Status</a>
+                </li>
+                <!-- <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Dropdown
                   </a>
@@ -40,7 +51,7 @@
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                   </ul>
                 </li>
               </ul>
