--- a/corgi/seller/templates/seller_product.html
+++ b/corgi/seller/templates/seller_product.html
@@ -32,7 +32,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for product in seller_products %}
+                {% for product in products %}
                 <tr>
                     <td>{{ product.name }}</td>
                     <td><img src="{{ product.image.url }}" alt="{{ product.name }}" width="100" height="100"></td>
