--- a/corgi/core/templates/login.html
+++ b/corgi/core/templates/login.html
@@ -1,23 +1,39 @@
+
+
 {% extends "corebase.html" %}
 
 {% load static %}
+
 {% block header %}
-<title> Log in </title>
+<title>Log in</title>
 {% endblock %}
 
 {% block nav %}
-
-
 {% endblock %}
 
 {% block content %}
-<form method="POST">
-    <h1>Login</h1>
+
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4">
+      <form method="POST" class="card p-4">
         {% csrf_token %}
+        <h1 class="text-center mb-4">Log in</h1>
         {% comment %} {{ form.as_p }} {% endcomment %}
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <button type="submit" class="btn">Login</button>
-        <div><p>don't have account? <a href='/user/register'>Register</a></p></div>
-</form>
+        <div class="form-group mt-3">
+          <label for="username">Username:</label>
+          <input type="text" name="username" class="form-control" placeholder="Username" required>
+        </div>
+        <div class="form-group mt-3">
+          <label for="password">Password:</label>
+          <input type="password" name="password" class="form-control" placeholder="Password" required required style="margin-bottom: 20px;">
+        </div>
+        <button type="submit" class="btn btn-primary btn-block" style="border-color: #ec9410; background-color: #ec9410;" >Log in</button>
+        <div class="text-center mt-4">
+          <p>Don't have an account? <a href='/user/register'>Register</a></p>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
