--- a/corgi/core/templates/logout.html
+++ b/corgi/core/templates/logout.html
@@ -1,1 +1,18 @@
-<h1> You have been logged out </h1>
+{% extends "corebase.html" %}
+
+{% block content %}
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="card">
+          <div class="card-body">
+            <h1 class="card-title text-center mb-4">You have been logged out</h1>
+            <div class="d-flex justify-content-center">                
+                <a href='/user/login' class="btn btn-primary" style="border-color: #ec9410; background-color: #ec9410;">Log In Again</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock %}
