--- a/corgi/core/templates/logout.html
+++ b/corgi/core/templates/logout.html
@@ -1,18 +1,28 @@
 {% extends "corebase.html" %}
 
-{% block content %}
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-md-6 offset-md-3">
-        <div class="card">
-          <div class="card-body">
-            <h1 class="card-title text-center mb-4">You have been logged out</h1>
-            <div class="d-flex justify-content-center">                
-                <a href='/user/login' class="btn btn-primary" style="border-color: #ec9410; background-color: #ec9410;">Log In Again</a>
+{% load static %}
+
+
+<body>
+    {% block content %}
+    <img src="{% static 'media/logout.jpg'%}" class='img-fluid' alt="" style='position: absolute; top: 0; left: 0; z-index: -1; width: 100%;height: 1000px;'>
             </div>
-          </div>
+    <div class="container mt-5">
+        <div class="row" justify-content-center>
+            <div class="col-md-6 offset-md-3">
+                <div class="card">
+                    <div class="card-body" >
+                        <h1 class="card-title text-center mb-4">You have been logged out</h1>
+                            <div class="d-flex justify-content-center">                 
+                                <a href='/user/login' class="btn btn-primary" style="border-color: #ec9410; background-color: #ec9410; ">Log In Again</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-{% endblock %}
+    {% endblock %}
+</body>
+
+
+
