--- a/corgi/core/templates/register.html
+++ b/corgi/core/templates/register.html
@@ -1,16 +1,22 @@
 {% extends "corebase.html" %}
 
 {% block content %}
-
-<div class="col-md-6 offset-md-3">
-    <h1>Register</h1>
-    <br/>
-<form method="POST" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-secondary">Submit</button>
-</form>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h1 class="card-title text-center mb-4">Register</h1>
+          <form method="POST" action="">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn btn-secondary" style="border-color: #ec9410; background-color: #ec9410;">Submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
 {% endblock %}
