--- a/corgi/seller/templates/Sbase.html
+++ b/corgi/seller/templates/Sbase.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <head>
+{% block title %}
     <title>Seller Site</title>
+{% endblock %}
     <nav class="navbar bg-body-tertiary fixed-top">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -30,7 +32,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="">My Profile Setting</a>
+                  <a class="nav-link active" aria-current="page" href="/seller/edit-profile">My Store</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/seller/products">Manage My Store</a>
