--- a/corgi/seller/templates/add_product.html
+++ b/corgi/seller/templates/add_product.html
@@ -1,16 +1,11 @@
+{% extends "Sbase.html" %}
 {% load static %}
+{% block title %}
+<title> Add product </title>
+{% endblock %}
+{% comment %} <!DOCTYPE html> {% endcomment %}
 
-<!DOCTYPE html>
-<style>
-  body {
-  position: absolute;
-  top: 18%;
-  width: 30%;
-  height: 20%;
-  left: 5%;
-}
-</style>
-<html>
+{% comment %} <html>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -53,10 +48,19 @@
           </div>
         </div>
       </nav>
-</head>
+</head> {% endcomment %}
 
-<body>
+
 {% block content %}
+<style>
+  body {
+  position: absolute;
+  top: 18%;
+  width: 30%;
+  height: 20%;
+  left: 5%;
+}
+</style>
   <div class="container">
     <div class="card" style="width: 1200px; height: 660px;">
       <div class="card-header" style="border-color: #f8bc63; background-color: #f8bc63;">
@@ -121,6 +125,5 @@
   </div>        
   <!-- <img src="{% static 'media/add.jpg' %}" alt="Add Image" class="img-thumbnail" style='width: 400px;height: 400px;position: absolute;top: 130%;right: -100%;transform: translateY(-50%);'> -->
   {% endblock %}
-</body>
-</html>
+
 
