--- a/corgi/seller/templates/edit_product.html
+++ b/corgi/seller/templates/edit_product.html
@@ -1,47 +1,29 @@
 {% extends "Sbase.html" %}
 {% load static %}
-
+{% block title %}
+<title> Edit product </title>
+{% endblock %}
 
 {% block content %}
-{% comment %} <p style="position: absolute;top: 45%;left: 27%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">Let's make corgi products a love</p>
-<p style="position: absolute;top: 55%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);color: white;font-size: 70px;text-align: center; font-size: 30px">at first sight experience for everyone!</p>
-<img src="{% static 'media/first.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'> {% endcomment %}
-</br>
-</br>
-</br>
-</br>
-<section class="pt-5 pb-5">
-    {% comment %} <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <h1 class="mb-3" style="color: black;">Edit Product</h1>
-            </div>
-        </div>
-    </div> {% endcomment %}
-    <div class="container">
-            {% comment %} <table class="table table-striped" style="width: 350%;">
-                <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">Product</th>
-                        <th scope="col">Image</th>
-                        <th scope="col">Category</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for product in products %}
-                    <tr>
-                        <td>{{ product.name }}</td>
-                        <td><img src="{{ product.image.url }}" alt="{{ product.name }}" width="100" height="100"></td>
-                        <td>{{ product.category }}</td>
-                        <td>{{ product.price }}</td>
-                        <td>{{ product.status }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table> {% endcomment %}
+<style>
+    body {
+    position: absolute;
+    top: 18%;
+    width: 30%;
+    height: 20%;
+    left: 5%;
+  }
+  .container .card {
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    max-width: 300px;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  </style>
+    <div class="container card">
             <form method="POST" enctype="multipart/form-data">
                 <h1 class='box'>Edit Product</h1>
                 {% csrf_token %}
@@ -49,5 +31,4 @@
                 <button type="submit">Register</button>
             </form>
     </div>
-</section>
 {% endblock %}
