--- a/corgi/seller/templates/seller_product.html
+++ b/corgi/seller/templates/seller_product.html
@@ -1,6 +1,10 @@
+{% extends "Sbase.html" %}
 {% load static %}
+{% block title %}
+<title> Manage Product </title>
+{% endblock %}
 
-<!DOCTYPE html>
+{% block content %}
 <style>
   body {
   position: absolute;
@@ -10,53 +14,6 @@
   left: 5%;
 }
 </style>
-<html>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<head>
-    <title>Seller Site</title>
-    <nav class="navbar bg-body-tertiary fixed-top">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;">
-            Corgi Store
-            <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
-          </a>
-          <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-              <h3 class="offcanvas-title" id="offcanvasNavbarLabel">Seller Menu</h3>
-              <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-          
-            <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">My Profile Setting</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/seller/products">Manage My Store</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Inbox</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Order Status</a>
-                </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </nav>
-</head>
-
-
-{% block content %}
 <form method="POST">
   {% csrf_token %}
   <div class="card-footer">
