--- a/corgi/buyer/templates/checkout.html
+++ b/corgi/buyer/templates/checkout.html
@@ -93,7 +93,7 @@
     <div id="imagePreview"></div>
   </form>
 <br>
-  <a href="/" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">Confirm Payment</a>
+  <a href="payment-status/" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:10px; width: 210px; position: relative; ">Confirm Payment</a>
 </div>
 <script>
   function previewImage(event)
